--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-registration==2.4.1
 gunicorn==19.9.0
 Pillow==6.1.0
 psycopg2==2.8.3
+python-decouple==3.1
 pytz==2019.1
 utils==0.9.0
 whitenoise==4.1.3
